errors
mainwindow.cpp: In member function ‘void MainWindow::updateFrames()’:
mainwindow.cpp:42:62: error: request for member ‘label_cam0’ in ‘((MainWindow*)this)->MainWindow::ui’, which is of pointer type ‘Ui::MainWindow*’ (maybe you meant to use ‘->’ ?)
   42 |        QPixmap pixmap = QPixmap::fromImage(image).scaled(ui.label_cam0->size(), Qt::KeepAspectRatio);
      |                                                             ^~~~~~~~~~

mainwindow.cpp:45:24: error: request for member ‘label_cam0’ in ‘((MainWindow*)this)->MainWindow::ui’, which is of pointer type ‘Ui::MainWindow*’ (maybe you meant to use ‘->’ ?)
   45 |             case 0: ui.label_cam0->setPixmap(pixmap); break;
      |                        ^~~~~~~~~~
mainwindow.cpp:46:24: error: request for member ‘label_cam1’ in ‘((MainWindow*)this)->MainWindow::ui’, which is of pointer type ‘Ui::MainWindow*’ (maybe you meant to use ‘->’ ?)
   46 |             case 1: ui.label_cam1->setPixmap(pixmap); break;
      |                        ^~~~~~~~~~
mainwindow.cpp:47:24: error: request for member ‘label_cam2’ in ‘((MainWindow*)this)->MainWindow::ui’, which is of pointer type ‘Ui::MainWindow*’ (maybe you meant to use ‘->’ ?)
   47 |             case 2: ui.label_cam2->setPixmap(pixmap); break;
      |                        ^~~~~~~~~~
mainwindow.cpp:48:24: error: request for member ‘label_cam3’ in ‘((MainWindow*)this)->MainWindow::ui’, which is of pointer type ‘Ui::MainWindow*’ (maybe you meant to use ‘->’ ?)
   48 |             case 3: ui.label_cam3->setPixmap(pixmap); break;
      |                        ^~~~~~~~~~
make: *** [makefile:37: mainwindow.o] Error 1
